# modbot

./: .pre-commit-config.yaml  LICENSE.md  README.md  flake.nix  pyproject.toml
modbot/: __main__.py  bot.py
modbot/extensions/: auto_moderation.py  mod.py
slurs/: furry.yaml  sulrs.yaml
tests/: test_modbot.py
